# Personal-Utilities

./: .gitignore  CMakeLists.txt
Personal-Utilities/: CMakeLists.txt  Conversion.h  Date.cpp  Date.h  File.cpp  File.h  InstrumentationTimer.h  JSON.cpp  JSON.h  JSONtest.json  Objectpool.h  Objectsizes.h  Personal-Utilities.cpp  Personal-Utilities.h  README.md  Random.cpp  Random.h  Rollingaverage.h  Timer.h  TimingDefines.h  Utils.h  typedefs.h  useful.h  utilsmath.h
